# ssdownload

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY_STATUS.md  README.md  TODO.md  pyproject.toml  ssstats_cache.json
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  release.yml  security.yml
docs/: API_REFERENCE.md  CLI_REFERENCE.md  DEVELOPMENT.md  EXAMPLES.md  INSTALLATION.md  STATISTICS_ANALYSIS.md  TROUBLESHOOTING.md  matrix_information.md  statistics.md
src/ssdownload/: __init__.py  cli.py  cli_utils.py  client.py  config.py  downloader.py  exceptions.py  filters.py  index_manager.py  page_scraper.py
tests/: __init__.py  helpers.py  test_api_integration.py  test_cli.py  test_cli_utils.py  test_client.py  test_config.py  test_downloader.py  test_filters.py  test_index_manager.py
tests/contract/: __init__.py  test_suitesparse_api.py
tests/e2e/: __init__.py  test_complete_workflows.py
tests/integration/: __init__.py  test_api_integration.py  test_real_api.py
tests/property/: __init__.py  test_filters_properties.py  test_range_parsing.py
tests/unit/: __init__.py  test_archive_extraction.py  test_cli.py  test_cli_utils.py  test_client.py  test_config.py  test_downloader.py  test_error_handling.py  test_exceptions.py  test_filters.py  test_index_manager.py  test_page_filters.py  test_page_scraper.py
